[package]
name = "iron"
version = "0.1.0"
edition = "2021"

[dependencies]
env_logger = "0.10.0"
log = "0.4.17"
thiserror = "1.0.40"
winit = "0.27.0"
wgpu = "0.15"
bytemuck = { version = "1.12", features = [ "derive" ] }
anyhow = "1.0"
cgmath = "0.18"

[dependencies.image]
version = "0.24"
features = ["png", "jpeg"]